# robot_ros2

./: CMakeLists.txt  diffdrive.xml  package.xml
config/: mapper_params_online_async.yaml  my_controllers.yaml
description/: lidar.xacro  robot.urdf.xacro  robot_core.xacro  ros2_control.xacro
hardware/: diffbot_system.cpp
hardware/include/diffdrive/: diffbot_system.hpp  serial_comms.hpp  visibility_control.h  wheel.hpp
launch/: launch_robot.launch.py  rplidar.launch.py  rsp.launch.py
